Make license SPDX compatible

--- a/package.json
+++ b/package.json
@@ -66,5 +66,5 @@
     "social buttons",
     "shariff"
   ],
-  "license": "MIT <http://www.opensource.org/licenses/mit-license.php>"
+  "license": "MIT"
 }
