--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "less-plugin-autoprefix": "^1.4.1",
     "less-plugin-clean-css": "^1.5.0",
     "shariff-backend-node": "^1.0.7",
-    "uglifyify": "^3.0.1"
+    "uglifyify": "^3.0.1",
+	"jsonminify": "^0.2.3"
   },
   "keywords": [
     "heise",
